# steelseries-engine

./: .gitignore  <  CMakeLists.txt  flake.nix
doc/: Doxyfile.in  data.json
include/: device.h  driver.h  log.h
include/device/: device.h  rival310.h
src/: CMakeLists.txt  log.c  main.c
src/device/: CMakeLists.txt  rival310.c
