CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

PROJECT(
    steelseries_engine
    VERSION 1.0.0
    LANGUAGES C
    )

SET(CMAKE_C_STANDARD 23)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if (NOT CMAKE_BUILD_TYPE)
  MESSAGE(STATUS "No build type selected, default to Release")
  SET(CMAKE_BUILD_TYPE "Release")
endif()

# COMPILATION FLAGS
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wno-unknown-pragmas -Wno-missing-field-initializers -Wno-unused-result")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OPTI_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG_LOG -DNDEBUG -O0 -g3 -fsanitize=address")

# OPTIMISATION FLAGS
SET(OPTI_FLAGS "-O3")

# SOURCE DIRECTORIES
SET(CMAKE_SOURCE_DIR src/ include/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

# SUBDIRECTORIES
ADD_SUBDIRECTORY(src/)
ADD_SUBDIRECTORY(doc/)

# PROJECT EXECUTABLE
ADD_EXECUTABLE(steelseries-engine src/main.c)
TARGET_LINK_LIBRARIES(steelseries-engine PRIVATE driver hidapi-hidraw pthread)

